# FANL-Reproducibility-Package

./: README.md  adaptive_fanl_traced.pt  inference_instructions.txt
configs/: model_export_config.json  preprocessing_config.json  training_config.json
dll/: XNNPACK.lib  c10_cuda.lib  caffe2_nvrtc.lib  cpuinfo.lib  fmt.lib  microkernels-prod.lib  pthreadpool.lib  torch_cuda.lib
indices/: generate_indices.py
indices/indices/: indices_30k_test.txt  indices_30k_train.txt  indices_30k_val.txt  indices_full_bloodmnist_test.txt  indices_full_bloodmnist_train.txt  indices_full_bloodmnist_val.txt  indices_full_pathmnist_test.txt  indices_full_pathmnist_train.txt  indices_full_pathmnist_val.txt  indices_readme.txt
minimal_scripts/: CMakeLists.txt  fanl_test.cpp
